improve planner
